--- a/sequence-protein-features.ipynb
+++ b/sequence-protein-features.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 70,
    "id": "5ba965a9",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "id": "d647a417",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 72,
    "id": "cb2a4273",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 73,
    "id": "16fd8d0d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 74,
    "id": "6bfdf196",
    "metadata": {},
    "outputs": [
@@ -175,7 +175,7 @@
        "[6600 rows x 2 columns]"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 75,
    "id": "7e195164",
    "metadata": {},
    "outputs": [],
@@ -226,12 +226,20 @@
     "    \n",
     "    X = ProteinAnalysis(protein)\n",
     "    \n",
-    "    return X.get_amino_acids_percent()[param]\n"
+    "    return X.get_amino_acids_percent()[param]\n",
+    "\n",
+    "\n",
+    "def count_amino_acids(protein, param):\n",
+    "    # Calculate Count standard amino acids, return a dict.\n",
+    "    \n",
+    "    X = ProteinAnalysis(protein)\n",
+    "    \n",
+    "    return X.count_amino_acids()[param]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 76,
    "id": "8db03899",
    "metadata": {},
    "outputs": [],
@@ -244,12 +252,15 @@
     "    lambda x: secondary_structure_fraction(x.Sequence), axis=1))\n",
     "\n",
     "for am in aminoacids:\n",
-    "    df_bio['Percent_'+am] = df_bio.apply(lambda x: get_amino_acids_percent(x.Sequence, am), axis=1)"
+    "    df_bio['Percent_'+am] = df_bio.apply(lambda x: get_amino_acids_percent(x.Sequence, am), axis=1)\n",
+    "    \n",
+    "#for am in aminoacids:\n",
+    "    #df_bio['Count_'+am] = df_bio.apply(lambda x: count_amino_acids(x.Sequence, am), axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 77,
    "id": "c51f521c",
    "metadata": {},
    "outputs": [
@@ -636,7 +647,7 @@
        "[6600 rows x 26 columns]"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 78,
    "id": "020e0ca6",
    "metadata": {},
    "outputs": [
@@ -835,7 +846,7 @@
        "[6088 rows x 7 columns]"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 78,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -847,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 85,
    "id": "8ab86d96",
    "metadata": {},
    "outputs": [],
@@ -858,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 86,
    "id": "448bae5e",
    "metadata": {},
    "outputs": [
@@ -1063,7 +1074,7 @@
        "[6088 rows x 8 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1074,7 +1085,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 87,
    "id": "4bc84252",
    "metadata": {},
    "outputs": [
@@ -1279,7 +1290,7 @@
        "[1100 rows x 8 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1298,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 88,
    "id": "e18c1bf3",
    "metadata": {},
    "outputs": [
@@ -1685,7 +1696,7 @@
        "[5995 rows x 33 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 88,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1698,19 +1709,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 89,
    "id": "249132e1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    11026\n",
-       "1      290\n",
+       "0    4895\n",
+       "1    1100\n",
        "Name: is_essential, dtype: int64"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 89,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 90,
    "id": "9b520933",
    "metadata": {},
    "outputs": [],
