Ajustes de treinamento

--- a/sequence-protein-features.ipynb
+++ b/sequence-protein-features.ipynb
@@ -62,19 +62,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 43,
    "id": "16fd8d0d",
    "metadata": {},
    "outputs": [],
    "source": [
     "file = 'proteomas/cerevisiae.fasta'\n",
+    "#file = 'proteomas/protein_elegans.fasta'\n",
+    "#file = 'proteomas/protein_droso.fasta'\n",
     "\n",
     "proteoma = lerFastaBio(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 44,
    "id": "6bfdf196",
    "metadata": {},
    "outputs": [
@@ -181,7 +183,7 @@
        "[6600 rows x 2 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 45,
    "id": "7e195164",
    "metadata": {},
    "outputs": [],
@@ -269,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 46,
    "id": "8db03899",
    "metadata": {},
    "outputs": [],
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 47,
    "id": "c51f521c",
    "metadata": {},
    "outputs": [
@@ -679,7 +681,7 @@
        "[6600 rows x 27 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "020e0ca6",
    "metadata": {},
    "outputs": [
@@ -878,19 +880,21 @@
        "[6088 rows x 7 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_ppi = pd.read_csv('data/proteins_features_cerevisiae.csv')\n",
+    "#df_ppi = pd.read_csv('data/proteins_features_elegans.csv')\n",
+    "#df_ppi = pd.read_csv('data/proteins_features_droso.csv')\n",
     "df_ppi"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 54,
    "id": "8ab86d96",
    "metadata": {},
    "outputs": [],
@@ -904,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 55,
    "id": "448bae5e",
    "metadata": {},
    "outputs": [
@@ -1109,7 +1113,7 @@
        "[6088 rows x 8 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1120,7 +1124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 56,
    "id": "4bc84252",
    "metadata": {},
    "outputs": [
@@ -1325,7 +1329,7 @@
        "[1100 rows x 8 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1344,7 +1348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 57,
    "id": "e18c1bf3",
    "metadata": {},
    "outputs": [
@@ -1744,7 +1748,7 @@
        "[5995 rows x 34 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1757,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 58,
    "id": "249132e1",
    "metadata": {},
    "outputs": [
@@ -1769,7 +1773,7 @@
        "Name: is_essential, dtype: int64"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1780,14 +1784,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 59,
    "id": "9b520933",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dataset Final\n",
     "\n",
-    "df.to_csv('data/base_cerevisiae.csv', index=False)"
+    "df.to_csv('data/base_cerevisiae.csv', index=False)\n",
+    "#df.to_csv('data/base_elegans.csv', index=False)\n",
+    "#df.to_csv('data/base_drosophila.csv', index=False)"
    ]
   },
   {
